# xarray

./: API.md  API_zh.md  CMakeLists.txt  README.md  README_zh.md
include/: xarray.h  xarray_config.h  xarray_type.h
src/: xarray.c
test/: test_xarray.c  test_xarray_rcu.c
